--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "aws-serverless-express": "^3.4.0",
     "babel-loader": "^9.1.3",
     "express": "^4.19.2",
     "react": "^18.3.1",
