--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "license": "AGPL-version-3.0",
   "private": false,
   "engines": {
@@ -38,6 +37,8 @@
     "@babel/preset-react": "^7.24.7",
     "aws-serverless-express": "^3.4.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
