--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "on-finished": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
