--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
     "start": "npm run build && node ./dist/server.cjs"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/aws-serverless-express": "^3.3.9",
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "html-webpack-plugin": "^5.6.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.3",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
