--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && webpack --config webpack.config.cjs",
+    "build:dev": "webpack --watch",
+    "start:dev": "concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
     "start": "npm run build && node ./dist/server.cjs"
   },
   "devDependencies": {
@@ -44,9 +46,11 @@
     "@babel/preset-react": "^7.24.7",
     "aws-serverless-express": "^3.4.0",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^12.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "on-finished": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
