--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && webpack --config webpack.config.cjs",
-    "build:dev": "webpack --watch",
+    "build:dev": "webpack --watch --stats-error-details",
     "start:dev": "concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
-    "start": "npm run build && node ./dist/server.cjs"
+    "start": "npm run build && node ./dist/server.cjs",
+    "test": "npx playwright test"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
