--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   ssr-web:
     image: node:alpine
     environment: 
-      - STAGE=dev
+      - STAGE=local
     healthcheck:
-      test: ["CMD-SHELL", "wget --quiet --spider --tries=1 http://localhost:3001/dev/ || exit 1"]
+      test: ["CMD-SHELL", "wget --quiet --spider --tries=1 http://localhost:3001/local/ || exit 1"]
       interval: 10s
       timeout: 2s
       retries: 3
@@ -27,7 +27,7 @@ services:
     image: mcr.microsoft.com/playwright
     environment: 
       - BASE_URL=http://ssr-web:3001
-      - STAGE=dev
+      - STAGE=local
     container_name: ssr-test
     volumes:
       - ./tests:/app/tests
