--- a/.env.docker
+++ b/.env.docker
@@ -2,6 +2,7 @@ PORT=3001
 STAGE=docker
 APP_ENV=docker
 STATIC_SOURCE=/app/public/static
+CLIENT_PUBLIC_PATH=/docker/public/static
 
 # used for testing
 BASE_URL=http://ssr-web:3001
