--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && webpack --config webpack.config.cjs",
-    "build:dev": "webpack --watch --stats-error-details",
-    "start:dev": "concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
+    "build:dev": "dotenv -e .env -- webpack --watch --stats-error-details",
+    "start:dev": "dotenv -e .env -- concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
     "test": "npx playwright test"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "dotenv-cli": "^7.4.2",
     "html-webpack-plugin": "^5.6.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.3",
@@ -45,6 +46,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "aws-serverless-express": "^3.4.0",
+    "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^12.0.2",
