--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,9 +65,10 @@ jobs:
         id: deploy_ssr
         shell: bash
         run: |
+          echo lambda file path: ${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }}
           cd tf/ssr
           terraform init
-          terraform apply -auto-approve -var lambda_zip_path=$LAMBDA_BUILD_FILE_PATH -var static_files_source=$STATIC_FILES_CDN
+          terraform apply -auto-approve -var lambda_zip_path=${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }} -var static_files_source=$STATIC_FILES_CDN
 
       - name: sync static files
         shell: bash
