pass cdn vars to sync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,5 +73,5 @@ jobs:
       - name: sync static files
         shell: bash
         run: |
-          just static-sync $STATIC_FILES_BUCKET
-          aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_ID --paths "/*"
+          just static-sync ${{ steps.deploy_cdn.outputs.STATIC_FILES_BUCKET }}
+          aws cloudfront create-invalidation --distribution-id ${{ steps.deploy_cdn.outputs.CLOUDFRONT_ID }} --paths "/*"
