--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -14,7 +14,7 @@ env:
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
 jobs:
-  deploy:
+  destroy:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
