--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 PORT=3001
 STAGE=local
 APP_ENV=local
-STATIC_SOURCE=../public/static
+STATIC_SOURCE=../public
+CLIENT_PUBLIC_PATH=/local/public/static
 
 # used for testing
 BASE_URL=http://localhost:3001
