--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 PORT=3001
 STAGE=local
 APP_ENV=local
-STATIC_SOURCE=../public/static
+STATIC_SOURCE=../public
 CLIENT_PUBLIC_PATH=/local/public/static
 
 # used for testing
