--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     container_name: ssr-web
     volumes:
       - ./src/:/app/src
-      - ./public/static:/app/public/static
+      - ./assets:/app/assets
       - ./package.json:/app/package.json
       - ./tsconfig.json:/app/tsconfig.json
       - ./webpack.config.cjs:/app/webpack.config.cjs
