--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "dotenv-cli": "^7.4.2",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "^2.9.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.3",
     "webpack": "^5.92.1",
