--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@types/aws-serverless-express": "^3.3.9",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
@@ -41,19 +43,17 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.3",
     "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "aws-serverless-express": "^3.4.0",
-    "axios": "^1.7.2",
-    "babel-loader": "^9.1.3",
+    "webpack-cli": "^5.1.4",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^12.0.2",
+    "nodemon": "^3.1.4",
+    "babel-loader": "^9.1.3"
+  },
+  "dependencies": {
+    "aws-serverless-express": "^3.4.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4",
     "on-finished": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
