--- a/package.json
+++ b/package.json
@@ -30,24 +30,25 @@
     "test": "npx playwright test"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/aws-serverless-express": "^3.3.9",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "dotenv-cli": "^7.4.2",
     "html-webpack-plugin": "^4.5.2",
     "mini-css-extract-plugin": "^2.9.0",
+    "nodemon": "^3.1.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.3",
     "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "concurrently": "^8.2.2",
-    "copy-webpack-plugin": "^12.0.2",
-    "nodemon": "^3.1.4",
-    "babel-loader": "^9.1.3"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "aws-serverless-express": "^3.4.0",
