--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,15 +49,19 @@ jobs:
           echo "STATIC_FILES_CDN=$STATIC_FILES_CDN" >> $GITHUB_OUTPUT
           echo "CLOUDFRONT_ID=$CLOUDFRONT_ID" >> $GITHUB_OUTPUT
 
-  build-app:
-    needs: 
+  deploy-ssr:
+    needs:
       - deploy-cdn
     runs-on: ubuntu-latest
     outputs:
       lambda_build_file_path: ${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }}
     steps:
       - uses: actions/checkout@v4
-      - uses: extractions/setup-just@v2
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-region: ${{ vars.AWS_REGION }}
+            role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
+            role-session-name: GitHubActions
       - name: build app
         id: build_app
         shell: bash
@@ -69,19 +73,6 @@ jobs:
           LAMBDA_BUILD_FILE_PATH=${GITHUB_WORKSPACE}/${{ env.SHORT_SHA }}.zip
           just build $LAMBDA_BUILD_FILE_PATH
           echo "LAMBDA_BUILD_FILE_PATH=$LAMBDA_BUILD_FILE_PATH" >> $GITHUB_OUTPUT
-
-  deploy-ssr:
-    needs:
-      - build-app
-      - deploy-cdn
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-            aws-region: ${{ vars.AWS_REGION }}
-            role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
-            role-session-name: GitHubActions
       - name: init
         shell: bash
         run: |
@@ -91,7 +82,7 @@ jobs:
         shell: bash
         run: |
           cd tf/ssr
-          terraform apply -auto-approve -var lambda_zip_path=${{ needs.build-app.outputs.lambda_build_file_path }} -var static_files_source=${{ needs.deploy-cdn.outputs.static_files_cdn }}
+          terraform apply -auto-approve -var lambda_zip_path=${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }} -var static_files_source=${{ needs.deploy-cdn.outputs.static_files_cdn }}
 
   static-files-sync:
     needs:
