--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,23 @@ env:
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
 jobs:
+  configure:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ vars.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
+          role-session-name: GitHubActions
+      - name: Export AWS Credentials
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}" >> $GITHUB_ENV
+
   deploy-cdn:
+    needs:
+      - configure
     runs-on: ubuntu-latest
     outputs:
       static_files_bucket: ${{ steps.set_vars.outputs.STATIC_FILES_BUCKET }}
@@ -22,11 +38,6 @@ jobs:
       cloudfront_id: ${{ steps.set_vars.outputs.CLOUDFRONT_ID }}
     steps:
       - uses: actions/checkout@v4
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-            aws-region: ${{ vars.AWS_REGION }}
-            role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
-            role-session-name: GitHubActions
       - name: init
         shell: bash
         run: |
@@ -51,6 +62,7 @@ jobs:
 
   deploy-ssr:
     needs:
+      - configure
       - deploy-cdn
     runs-on: ubuntu-latest
     outputs:
@@ -87,6 +99,7 @@ jobs:
 
   static-files-sync:
     needs:
+      - configure
       - deploy-cdn
       - deploy-ssr
     runs-on: ubuntu-latest
