--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,29 +14,7 @@ env:
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
 jobs:
-  configure:
-    runs-on: ubuntu-latest
-    outputs:
-      AWS_ACCESS_KEY_ID: ${{ steps.configure.outputs.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ steps.configure.outputs.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ steps.configure.outputs.AWS_SESSION_TOKEN }}
-    steps:
-      - name: Configure AWS credentials
-        id: configure
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ${{ vars.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
-          role-session-name: GitHubActions
-      - name: Export AWS Credentials
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${{ steps.configure.outputs.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ steps.configure.outputs.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-          echo "AWS_SESSION_TOKEN=${{ steps.configure.outputs.AWS_SESSION_TOKEN }}" >> $GITHUB_ENV
-
   deploy-cdn:
-    needs:
-      - configure
     runs-on: ubuntu-latest
     outputs:
       static_files_bucket: ${{ steps.set_vars.outputs.STATIC_FILES_BUCKET }}
@@ -44,6 +22,11 @@ jobs:
       cloudfront_id: ${{ steps.set_vars.outputs.CLOUDFRONT_ID }}
     steps:
       - uses: actions/checkout@v4
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-region: ${{ vars.AWS_REGION }}
+            role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
+            role-session-name: GitHubActions
       - name: init
         shell: bash
         run: |
@@ -68,14 +51,12 @@ jobs:
 
   deploy-ssr:
     needs:
-      - configure
       - deploy-cdn
     runs-on: ubuntu-latest
     outputs:
       lambda_build_file_path: ${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }}
     steps:
       - uses: actions/checkout@v4
-      - uses: extractions/setup-just@v2
       - uses: aws-actions/configure-aws-credentials@v4
         with:
             aws-region: ${{ vars.AWS_REGION }}
@@ -105,7 +86,6 @@ jobs:
 
   static-files-sync:
     needs:
-      - configure
       - deploy-cdn
       - deploy-ssr
     runs-on: ubuntu-latest
