--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -120,8 +120,8 @@ jobs:
       - name: install
         shell: bash
         run: |
-          npm i @playwright/test
-          npx playwright install-deps
+          npm install @playwright/test playwright-chromium
+          npx playwright install --with-deps chromium
       - name: test
         shell: bash
         env:
