--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 env:
-  TF_VAR_region: us-east-1
+  TF_VAR_region: ${{ vars.AWS_REGION }}
   TF_VAR_environment: dev
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
