--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 env:
-  TF_VAR_region: us-east-1
+  TF_VAR_region: ${{ vars.AWS_REGION }}
   TF_VAR_environment: dev
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
@@ -53,6 +53,9 @@ jobs:
     needs:
       - deploy-cdn
     runs-on: ubuntu-latest
+    env:
+      # need to be us-east-1 for lambda@edge
+      TF_VAR_region: us-east-1 
     outputs:
       lambda_build_file_path: ${{ steps.build_app.outputs.LAMBDA_BUILD_FILE_PATH }}
       web_url: ${{ steps.set_vars.outputs.WEB_URL }}
