--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,8 @@
 PORT=3001
 STAGE=dev
 APP_ENV=production
-STATIC_SOURCE=https://aa11youridjher3.cloudfront.net/public
+STATIC_SOURCE=https://d1vbrm7gmzhud5.cloudfront.net/public
+CLIENT_PUBLIC_PATH=/dev/public
 
 # used for testing
 BASE_URL=http://localhost:3001
