--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -14,7 +14,7 @@ env:
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
 jobs:
-  destroy-ssr:
+  destroy-cdn:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,8 +37,8 @@ jobs:
           cd tf/cdn
           terraform destroy -auto-approve
 
-  destroy-cdn:
-    needs: destroy-ssr
+  destroy-ssr:
+    needs: destroy-cdn
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
