--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "contributors": [],
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./public",
-    "build": "npm run clean && webpack --config webpack.config.cjs",
+    "build": "webpack --config webpack.config.cjs",
     "build:dev": "dotenv -e .env -- webpack --watch --stats-error-details",
     "start:dev": "dotenv -e .env -- concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
     "test": "npx playwright test"
@@ -52,7 +52,6 @@
   },
   "dependencies": {
     "aws-serverless-express": "^3.4.0",
-    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "on-finished": "^2.4.1",
