working with basepath var

--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,7 @@
 PORT=3001
-STAGE="/"
-APP_ENV=local
 STATIC_SOURCE=../public
-CLIENT_PUBLIC_PATH=/local/public
+PUBLIC_PATH="/public"
+BASE_PATH="/"
 
 # used for testing
 BASE_URL=http://localhost:3001
