example base path

--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,7 @@ PORT=3001
 STATIC_SOURCE=../public
 PUBLIC_PATH="/public"
 BASE_PATH="/"
+# BASE_PATH="/ssr/"
 
 # used for testing
 BASE_URL=http://localhost:3001
