--- a/.env.docker
+++ b/.env.docker
@@ -1,8 +1,7 @@
 PORT=3001
-STAGE=docker
-APP_ENV=docker
 STATIC_SOURCE=/app/public
-CLIENT_PUBLIC_PATH=/docker/public
+PUBLIC_PATH="/public"
+BASE_PATH="/docker/"
 
 # used for testing
 BASE_URL=http://ssr-web:3001
