--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 PORT=3001
-STAGE=dev
 APP_ENV=production
-STATIC_SOURCE=https://d1vbrm7gmzhud5.cloudfront.net/public
-CLIENT_PUBLIC_PATH=/dev/public
+STATIC_SOURCE="NOT_USED"
+PUBLIC_PATH="/public"
+BASE_PATH="/"
 
 # used for testing
 BASE_URL=http://localhost:3001
