--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,7 +1,6 @@
 name: Destroy Environment
 
 on:
-  workflow_call:
   workflow_dispatch:
 
 permissions:
@@ -14,7 +13,7 @@ env:
   TF_VAR_base_reference: chrispsheehan-lambda-ssr-react
 
 jobs:
-  destroy-cdn:
+  destroy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,35 +27,11 @@ jobs:
       - name: init
         shell: bash
         run: |
-          cd tf/cdn
+          cd tf
           terraform init
 
       - name: destroy
         shell: bash
         run: |
-          cd tf/cdn
-          terraform destroy -auto-approve
-
-  destroy-ssr:
-    needs: destroy-cdn
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: extractions/setup-just@v2
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-            aws-region: ${{ vars.AWS_REGION }}
-            role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_ROLE }}
-            role-session-name: GitHubActions
-
-      - name: init
-        shell: bash
-        run: |
-          cd tf/ssr
-          terraform init
-
-      - name: destroy
-        shell: bash
-        run: |
-          cd tf/ssr
-          terraform destroy -auto-approve --var lambda_zip_path=/no.zip -var static_files_source=blh.com
+          cd tf
+          terraform destroy -auto-approve --var lambda_zip_path=/no.zip
