--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,13 @@ jobs:
           PUBLIC_PATH: ${{ env.TF_VAR_public_path }}
           BASE_PATH: ${{ env.TF_VAR_base_path }}
           SHORT_SHA: $(echo $GITHUB_SHA | cut -c 1-6)
+          MODE: production
         run: |
-          LAMBDA_BUILD_FILE_PATH=${GITHUB_WORKSPACE}/${{ env.SHORT_SHA }}.zip
-          just build $LAMBDA_BUILD_FILE_PATH
+          LAMBDA_BUILD_FILE_PATH=${GITHUB_WORKSPACE}/${{ env.SHORT_SHA }}-ssr.zip
+          AUTH_BUILD_FILE_PATH=${GITHUB_WORKSPACE}/${{ env.SHORT_SHA }}-auth.zip
+          just build $LAMBDA_BUILD_FILE_PATH $AUTH_BUILD_FILE_PATH
           echo "LAMBDA_BUILD_FILE_PATH=$LAMBDA_BUILD_FILE_PATH" >> $GITHUB_OUTPUT
+          echo "AUTH_BUILD_FILE_PATH=$AUTH_BUILD_FILE_PATH" >> $GITHUB_OUTPUT
       - name: init
         shell: bash
         run: |
