--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src"],
+    "include": ["*/src"],
     "exclude": ["node_modules"]
   }
   
