--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 PORT=3001
 APP_ENV=local
-STATIC_SOURCE=../public
+STATIC_SOURCE=../../public
 PUBLIC_PATH="/public"
 BASE_PATH="/"
 # BASE_PATH="/ssr/"
