--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "webpack --config webpack.config.cjs",
     "build:dev": "dotenv -e .env -- webpack --watch --stats-error-details",
     "install-deps": "npm i && npm i --prefix app && npm i --prefix auth",
-    "start:dev": "npm run install-deps && dotenv -e .env -- concurrently \"npm run build:dev\" \"nodemon --watch ./dist --exec 'node ./dist/server.cjs'\"",
+    "start:dev": "npm run install-deps && dotenv -e .env -- concurrently \"npm run build:dev\" \"nodemon --watch ./app/dist --exec 'node ./app/dist/server.cjs'\"",
     "test": "npx playwright test"
   },
   "devDependencies": {
