--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -14,7 +14,7 @@ env:
   TF_VAR_base_path: "/"
   TF_VAR_public_path: "/public"
   TF_VAR_lambda_zip_path: a.zip
-  TF_VAR_auth_zip_path: a.zip
+  TF_VAR_auth_lambda_zip_path: a.zip
 
 jobs:
   destroy:
